# visualizator

./: CMakeLists.txt
src/: gcircleitem.cpp  gcircleitem.h  geffect.cpp  geffect.h  gobject.cpp  gobject.h  graphicitemmodel.cpp  graphicitemmodel.h  gsquareitem.cpp  gsquareitem.h  gtrianleitem.cpp  gtrianleitem.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  outliner.cpp  outliner.h  renderarea.cpp  renderarea.h  visualizer.cpp  visualizer.h
